   * new api to set and get event flags
   * events just before/after canvas rendering
   * frame object set/get API's
   * evas_object_name_child_find.
   * evas_gl_config_new/free.
   * evas_object_smart_callback_del_full.
   * EVAS_OBJECT_POINTER_MODE_NOGRAB_NO_REPEAT_UPDOWN.
   * EVAS_GL_OPTIONS_DIRECT.
   * evas_object_textblock_style_user_pop/push.
   * evas_object_ref_get

Fixes:

   * don't enable SSE3 if immintrin.h isn't there.
   * clip bounds calculation rounding error.
   * grab count negative values with weird multi-finger press/release usage.
   * clip bug that shows up in buffer engine.
   * disabled buggy SSE3 routines.
   * repeat events passing between layers within the same object.
   * uninitialized value when running generic loader.
   * rounding of update regions in scaled image objects.
   * handling of layouts where weights have sub integer values.
   * gl engine cliupping bug when rendering maps to fbo's.
   * liblinebreak disabled compilation bug.
   * color multiplier staying set when rendering map.
   * shader binary now saves if shader dir exists already.

Improvements:

   * use Eina_File mmap for bmp, ico, pmaps, psd, wbmp and xpm file access.
   * textblock br and tab tags now default for newline and tab.
   * extended pixman routine support for most software rendering routines.
   * added tiled rotator for 32bit displays (faster).
   * work around nvidia driver spin-using-cpu and don't use glXWaitGL()
   * evasgl back-end for software using OSMesa.

Removal:

   * Software_SDL engine is gone, use buffer engine directly.

Evas 1.1.0

Changes since Evas 1.0.0:
-------------------------

Additions:

    * auto-align feature to textblock
    * mixedwrap wrap mode to textblock
    * harfbuzz support for shaping
    * WBMP loader
    * mirror mode for tables
    * proxy abilities to image objects to choose source ro mirror
    * speculative texture cache to the OpenGL engine to avoid texture uploads